# grimoirelab-sirmordred

./: .gitignore  aliases.json  menu.yaml
docker/: Dockerfile  stage
releases/: 0.6.1.md
sirmordred/: _version.py
sirmordred/utils/: orgs.json  projects.json  setup.cfg
