[general]
short_name = Liferay
update = False
min_update_delay = 10
debug = True
logs_dir = logs
bulk_size = 100
scroll_size = 100
menu_file = ../../menu.yaml
aliases_file = ../../aliases.json

[projects]
projects_file = ./projects.json

[es_collection]
url = http://localhost:9200

[es_enrichment]
url = http://localhost:9200
autorefresh = True

[sortinghat]
host = localhost
user = root
password =
port = 8000
path = api/
ssl = false
affiliate = true
# commonly: Unknown
database = sortinghat
load_orgs = True
orgs_file = /home/bitergia/conf/organizations.json
autoprofile = [liferay, github, git, slack, stackexchange]
matching = [email, email-name, username]
sleep_for = 100
unaffiliated_group = Community Contributor
affiliate = True
strict_mapping = True
reset_on_load = False
#identities_file = [/home/bitergia/conf/identities.json]

[panels]
kibiter_time_from = now-90d
kibiter_default_index = git
kibiter_url = http://localhost:5601
kibiter_version = 6.8.6-3

[phases]
collection = True
identities = True
enrichment = True
panels = True

[liferay]
raw_index = liferay_raw
enriched_index = liferay_enriched
site-id = 14
from-date = 2021-05-01
backend-user = test
backend-password = test

[stackexchange]
raw_index = stackoverflow_raw
enriched_index = stackoverflow_enriched
from-date = 2021-06-01
